Second go at reorganising the finder panel

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -525,6 +525,7 @@
 	  </div>
     <div style='float:right;'>
       <div style='float:none;'>
+        <span class="currentpageselection" style="display:none;"></span>
         <form id="hn_newpageform">
         <div>
           <input id="newspreadsheet" type="submit" value="New" class="button" />
