Saving a template with a long name no longer borks things

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1162,7 +1162,7 @@ a.toolbar-item {
     margin:100px auto;
 }
 
-#newpage, #templatename 
+#newpage, #templatename, #hn_saveastemplateform 
 { 
   width: 96px;
 }
