--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -340,6 +340,7 @@
     
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">function list</a>
+      <a id="wizbtn" title="function wizard">wizard</a>
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -468,6 +469,25 @@
 	  <input type="button" class="button cancel" value="Cancel" />
 	</div>
       </form>
+    </div>
+
+    <div id="funwiz" class="dialog" style="display: none;">
+      <h2>$txt:{Functions}$</h2>
+      <a id="wizclose">x</a>
+
+      <div id="funwizwrapper">
+	<select id="wizcatlist"></select>
+	<div id="wizfunlist"></div>
+      </div>
+      <div id="wizselectedfun">
+	<h4 id="wizfunname"></h4><br />
+	<p id="wizfundesc"></p>
+      </div>
+      <div id="wizfunargs">
+      </div>
+      <div id="wiztext">
+       <textarea></textarea>
+      </div>
     </div>
     
     <div id="functions" class="dialog">
