--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -116,7 +116,30 @@ html,body {
     -webkit-border-radius : 4px 4px 4px 4px;
     -webkit-box-shadow    : 2px 2px 4px #AAA;
 }
-#functions h2, #columnmanagerdialog h2, #lineview h2 {
+#funwiz {
+    position           : absolute;
+    overflow           : visible;
+    width              : auto;
+    max-width          : none;
+    min-width          : 260px;
+    max-height         : none;
+    height             : auto;
+    display            : none;
+    background         : white;
+    border             : 2px solid #999;
+    z-index            : 10000003;
+    -moz-border-radius : 4px 4px 4px 4px;
+    -moz-box-shadow    : 2px 2px 4px #AAA;
+    -webkit-border-radius : 4px 4px 4px 4px;
+    -webkit-box-shadow    : 2px 2px 4px #AAA;
+}
+
+#funwiz .footer {
+    position           : absolute;
+    bottom             : 0px;
+}
+
+#functions h2, #funwiz h2, #columnmanagerdialog h2, #lineview h2 {
     display            : block;
     margin             : 0px;
     font               : bold 12px sans-serif;
