Added resizer to prototype function wizard

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -488,6 +488,7 @@
       <div id="wiztext">
        <textarea></textarea>
       </div>
+      <div class="footer"><a class="resize">&#x21f2;</a></div>    
     </div>
     
     <div id="functions" class="dialog">
