--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -339,7 +339,7 @@
     </div>
     
     <div id="formulabar">
-      <a id="functionsbtn" title="functions help">function list</a>
+      <a id="functionsbtn" title="functions help">funcs</a>
       <a id="wizbtn" title="function wizard">wizard</a>
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
