Moved dialogue handling code to a separate file, so that it can be used by spreadsheet view as well as table view.

--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -97,5 +97,6 @@
   <script src='/hypernumbers/hn.sheet.js'></script>
   <script src='/hypernumbers/hn.data.js'></script>
   <script src='/hypernumbers/hn.sitedata.js'></script>
+  <script src='/hypernumbers/hn.dialog.js'></script>
   <script src='/hypernumbers/hn.rendertable.js'></script>
 </html>
