Added line to load hn.dialog.js

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -716,5 +716,5 @@
     <script src="/hypernumbers/hn.ui.ctrlpanel.js"></script>
     <script src="/hypernumbers/hn.site.js"></script>  
     <script src="/hypernumbers/hn.main.js"></script>  
-
+  <script src='/hypernumbers/hn.dialog.js'></script>
 </html>
