Removed unecessary style attr in HTML

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -471,7 +471,7 @@
       </form>
     </div>
 
-    <div id="funwiz" class="dialog" style="display: none;">
+    <div id="funwiz" class="dialog">
       <h2>$txt:{Functions}$</h2>
       <a id="wizclose">x</a>
 
