Fixed close button in Function Wizard dialogue

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1122,7 +1122,7 @@ a.toolbar-item {
     cursor:pointer;
 }
 
-#ctrlclose, #funsclose, #dialogclose, #lineviewclose { 
+#ctrlclose, #funsclose, #dialogclose, #lineviewclose, #wizclose { 
     cursor:pointer;
     color:white; 
     font-weight:bold;
