Layout tweaks in CSS/HTML for resizing

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -117,7 +117,7 @@ html,body {
     -webkit-box-shadow    : 2px 2px 4px #AAA;
 }
 
-#funwiz .footer {
+#funwiz .resize {
     position           : absolute;
     right              : 0px;
     bottom             : 0px;
