--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -483,12 +483,12 @@
 	<h4 id="wizfunname"></h4><br />
 	<p id="wizfundesc"></p>
       </div>
-      <div id="wizfunargs">
+      <div id="wizfunargs" class="scrollable">
       </div>
-      <div id="wiztext">
-       <textarea></textarea>
-      </div>
-      <div class="footer"><a class="resize">&#x21f2;</a></div>    
+      <div class="footer">
+       <span id="wiztext"></span>
+       <a class="resize">&#x21f2;</a>
+      </div>    
     </div>
     
     <div id="functions" class="dialog">
