Adjusted Functions Help and Wizard Button Sizes so that the wizard button can be commented-out so that it can be committed to repo.

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -339,8 +339,8 @@
     </div>
     
     <div id="formulabar">
-      <a id="functionsbtn" title="functions help">funcs</a>
-      <a id="wizbtn" title="function wizard">wizard</a>
+      <a id="functionsbtn" title="functions help">functions</a>
+      <a id="wizbtn" title="function wizard">wiz</a>
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
