--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -340,9 +340,7 @@
     
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-<!--
       <a id="wizbtn" title="function wizard">wiz</a>
--->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -479,7 +477,7 @@
 
       <div id="funwizwrapper">
 	<select id="wizcatlist"></select>
-	<div id="wizfunlist"></div>
+	<div><select id="wizfunlist" size="8"></select></div>
       </div>
       <div id="wizselectedfun">
 	<h4 id="wizfunname"></h4><br />
