--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -340,9 +340,7 @@
     
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-<!--
       <a id="wizbtn" title="function wizard">wiz</a>
--->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -476,16 +474,17 @@
     <div id="funwiz" class="dialog">
       <h2>$txt:{Functions}$</h2>
       <a id="wizclose">x</a>
-
+      <div class="scrollable">
       <div id="funwizwrapper">
 	<select id="wizcatlist"></select>
-	<div><select id="wizfunlist" size="8"></select></div>
+	<div><select id="wizfunlist" size="12"></select></div>
       </div>
       <div id="wizselectedfun">
 	<h4 id="wizfunname"></h4><br />
 	<p id="wizfundesc"></p>
       </div>
-      <div id="wizfunargs" class="scrollable">
+      <div id="wizfunargs">
+      </div>
       </div>
       <div class="footer">
        <span id="wiztext"></span>
