Added some new formats

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -144,12 +144,16 @@
 	  <a id="fmt_0">$txt:{Plain}$</a>
 	  <hr />
 	  <a id="fmt_1">100 <span class="desc">($txt:{rounded}$)</span></a>
+	  <a id="fmt_1a">100.0 <span class="desc">(1 $txt:{decimal}$)</span></a>
 	  <a id="fmt_2">100.00 <span class="desc">(2 $txt:{decimals}$)</span></a>
+	  <a id="fmt_2a">100.000 <span class="desc">(3 $txt:{decimals}$)</span></a>
 	  <a id="fmt_3">
 	    <span class="red">100</span><span class="desc">($txt:{rounded}$)</span></a>
 	  <hr />
 	  <a id="fmt_4">(100) <span class="desc">($txt:{financial}$)</span></a>
+	  <a id="fmt_4a">(100.0) <span class="desc">($txt:{financial}$)</span></a>
 	  <a id="fmt_5">(100.00) <span class="desc">($txt:{financial}$)</span></a>
+	  <a id="fmt_5a">(100.000) <span class="desc">($txt:{financial}$)</span></a>
 	  <hr />
 	  <a id="fmt_6">$$100 <span class="desc">($txt:{currency}$)</span></a>
 	  <a id="fmt_7">$100.00 <span class="desc">($txt:{currency}$)</span></a>
@@ -157,11 +161,13 @@
 	    <span class="desc">($txt:{currency}$)</span></a>
 	  <hr />
 	  <a id="fmt_9">10% <span class="desc">($txt:{percentage}$)</span></a>
+	  <a id="fmt_9a">10.1% <span class="desc">($txt:{percentage}$)</span></a>
 	  <a id="fmt_10">10.12% <span class="desc">($txt:{percentage}$)</span></a>
+	  <a id="fmt_10a">10.123% <span class="desc">($txt:{percentage}$)</span></a>
 	  <hr />
 	  <a id="fmt_11">03/02/2009 <span class="desc">($txt:{date}$)</span></a>
 	  <a id="fmt_11a">03-Mar-09 <span class="desc">($txt:{date}$)</span></a>
-	  <a id="fmt_11b">3-March-2009 <span class="desc">($txt:{date}$)</span></a>          <a id="fmt_12">14:49:00 <span class="desc">($txt:{time}$)</span></a>
+	  <a id="fmt_11b">3-March-2009 <span class="desc">($txt:{date}$)</span></a>            <a id="fmt_12">14:49:00 <span class="desc">($txt:{time}$)</span></a>
 	  <a id="fmt_13">03/02/2009 14:49:00 <span class="desc">($txt:{datetime}$)</span></a>
 	</div>
       </div>
