--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -70,7 +70,7 @@ body {
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
 }
-.hninput {
+.hninput, .hn-webcontrol {
     font-size:inherit;
     width:100%;
     height:100%;
@@ -188,7 +188,7 @@ div.hn_inner > div {
     overflow: hidden;
 }
     
-input[type=submit].hninput, .button { 
+input[type=submit].hninput .button, input[type=submit].hn-webcontrol .button { 
     background:#EEE;
     -webkit-border-radius:3px 3px 3px 3px;    
     -moz-border-radius:3px 3px 3px 3px;
