Added support for repeated (infinite) arguments

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -491,6 +491,7 @@
         <span id="wizfunargscnt"></span>
         <div id="wizfunargs">
         </div>
+        <div id="wizfunrepeat"></div>
       </div>
       </div>
       <div class="footer">
