Changed style and markup scrollable content for arguments list.
Simplified function for adjusting size of scrollable content. Still
doesnae work properly for function wizard. TODO

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -64,10 +64,9 @@ html,body {
 }
 
 #funwiz .scrollable {
-    overflow-x         : visible;
-    overflow-y         : visible;
-    border             : none;
+    border: none;
 }
+
 
 .dialog .footer {
     min-height         : 18pt; /* TODO fix for columnmanager */
@@ -149,6 +148,10 @@ html,body {
 }
 
 #wizfunargscnt { display: none; }
+
+#wizfunargs {
+    overflow-y         : auto;
+}
 
 #wizfunargs div {
   padding-top: 2px;
