--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -480,7 +480,7 @@
     <div id="funwiz" class="dialog">
       <h2>$txt:{Functions}$</h2>
       <a id="wizclose">x</a>
-      <div class="scrollable">
+      <div >
       <div id="funwizwrapper">
 	<select id="wizcatlist"></select>
 	<div><select id="wizfunlist" size="12"></select></div>
@@ -489,7 +489,7 @@
 	<h4 id="wizfunname"></h4>
 	<p id="wizfundesc"></p>
         <span id="wizfunargscnt"></span>
-        <div id="wizfunargs">
+        <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizfunrepeat"></div>
       </div>
