Function text is changed when arguments updated or func selected

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -169,6 +169,11 @@ html,body {
   font-size: 10px;
 }
 
+#wiztext {
+  overflow-y: auto;
+  max-height: 22px;
+}
+
 #wizfunargs span.req:after { /* required argument flag */
   color: red;
   content: '*';
