Changed wiztext to textarea

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,9 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-<!--
       <a id="wizbtn" title="function wizard">wiz</a>
--->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -494,10 +492,10 @@
         <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizfunrepeat"></div>
+        <textarea id="wiztext"></textarea>
       </div>
       </div>
       <div class="footer">
-       <span id="wiztext"></span>
        <a class="resize">&#x21f2;</a>
       </div>
     </div>
