--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -492,7 +492,7 @@
         <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizfunrepeat"></div>
-        <textarea id="wiztext"></textarea>
+        <textarea id="wiztext" readonly="readonly"></textarea>
       </div>
       </div>
       <div class="footer">
