Stylesheet changes for wiztext (temp)

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -169,9 +169,8 @@ html,body {
   font-size: 10px;
 }
 
-#wiztext {
-  overflow-y: auto;
-  max-height: 22px;
+#wiztext { /* TODO */
+
 }
 
 #wizfunargs span.req:after { /* required argument flag */
