--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -170,7 +170,8 @@ html,body {
 }
 
 #wiztext { /* TODO */
-
+  width: 240px;
+  height: 6ex;
 }
 
 #wizfunargs span.req:after { /* required argument flag */
