Simplified resizing by moving repeat button and wizard text into wizstatus div.

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,9 +346,7 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-<!--
       <a id="wizbtn" title="function wizard">wiz</a>
--->
       <div id="formulawrapper">
 	<div id="formula" contentEditable="true"></div>
       </div>
@@ -493,8 +491,10 @@
         <span id="wizfunargscnt"></span>
         <div id="wizfunargs" class="scrollable">
         </div>
-        <div id="wizfunrepeat"></div>
-        <textarea id="wiztext" readonly="readonly"></textarea>
+        <div id="wizstatus">
+         <div id="wizfunrepeat"></div>
+         <textarea id="wiztext" readonly="readonly"></textarea>
+        </div>
       </div>
       </div>
       <div class="footer">
