--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -174,6 +174,11 @@ html,body {
   height: 6ex;
 }
 
+#wizdone {
+  float: right;
+  padding-right: 4px;
+}
+
 #wizfunargs span.req:after { /* required argument flag */
   color: red;
   content: '*';
