--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -492,6 +492,7 @@
         <div id="wizfunargs" class="scrollable">
         </div>
         <div id="wizstatus">
+         <button id="wizdone" type="button">Done</button>
          <textarea id="wiztext" readonly="readonly"></textarea>
         </div>
       </div>
