--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -169,14 +169,21 @@ html,body {
   font-size: 10px;
 }
 
-#wiztext { /* TODO */
-  width: 240px;
+#wizstatus {
+  position: absolute;
+  min-width: 240px;
+  width: auto;
+  padding-right: 4px;
+  bottom: 0px; /* to be adjusted by script */
+}
+
+#wiztext {
+  width: 100%;
   height: 6ex;
 }
 
 #wizdone {
   float: right;
-  padding-right: 4px;
 }
 
 #wizfunargs span.req:after { /* required argument flag */
