Added markup/style for Cancel button in Wizard

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -181,8 +181,9 @@ html,body {
   height: 6ex;
 }
 
-#wizdone {
+#wizbuttons {
   float: right;
+  padding-right: 2px;
 }
 
 #wizfunargs span.req:after { /* required argument flag */
