turing logging on

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -425,8 +425,8 @@
 	<li class="seperator"></li>
 	<li><a name="deleteleft">Delete (shift left)</a></li>
 	<li><a name="deleteup">Delete (shift up)</a></li>
-	<!-- <li class="seperator viewlogs"></li>
-	<li><a name="viewlogs" class="viewlogs">View cell's history</a></li> -->
+	<li class="seperator viewlogs"></li>
+	<li><a name="viewlogs" class="viewlogs">View cell's history</a></li>
       </ul>
     </div>
 
